--- a/index.html
+++ b/index.html
@@ -18,13 +18,202 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- StyleSheet Link -->
-		<link rel="stylesheet" href="assets/css/style.css.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body>
-		<!-- Header Section Start -->
-		<h1></h1>
+		<!------------------------------
+			 Header Section Start 
+		------------------------------->
+		<!-- Menu bar Section -->
+		<header>
+			<div class="container">
+				<nav class="navbar navbar-expand-lg py-4">
+					<div class="container-fluid">
+						<button
+							class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarTogglerDemo01"
+							aria-controls="navbarTogglerDemo01"
+							aria-expanded="false"
+							aria-label="Toggle navigation"
+						>
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+							<a class="navbar-brand fs-3 fw-bolder" href="#">HeroTech</a>
+							<ul class="navbar-nav m-auto mb-2 mb-lg-0 menu-sec">
+								<li class="nav-item">
+									<a
+										class="nav-link active fs-5 p-3 text-dark"
+										aria-current="page"
+										href="#"
+										>Home</a
+									>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link fs-5 p-3 text-dark" href="#">Courses</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link fs-5 p-3 text-dark">Success</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link fs-5 p-3 text-dark">Details</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link fs-5 p-3 text-dark">About</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link fs-5 p-3 text-dark">Gallery</a>
+								</li>
+							</ul>
+							<div class="d-flex" role="search">
+								<button
+									class="btn btn-outline-primary fs-6 fw-semibold px-4"
+									type="submit"
+								>
+									Register
+								</button>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>
+			<!-- Slider Section -->
+			<section class="slider-sec">
+				<div class="container">
+					<div
+						id="carouselExampleCaptions"
+						class="carousel slide slider-height"
+						data-bs-ride="false"
+					>
+						<!-- <div class="carousel-indicators">
+							<button
+								type="button"
+								data-bs-target="#carouselExampleCaptions"
+								data-bs-slide-to="0"
+								class="active"
+								aria-current="true"
+								aria-label="Slide 1"
+							></button>
+							<button
+								type="button"
+								data-bs-target="#carouselExampleCaptions"
+								data-bs-slide-to="1"
+								aria-label="Slide 2"
+							></button>
+							<button
+								type="button"
+								data-bs-target="#carouselExampleCaptions"
+								data-bs-slide-to="2"
+								aria-label="Slide 3"
+							></button>
+						</div> -->
+						<div class="carousel-inner">
+							<div
+								style="height: 85vh"
+								class="carousel-item active d-flex align-items-center"
+							>
+								<img
+									src="assets/images/cover/cover-1.png"
+									class="d-block w-100 img-fluid"
+									alt="..."
+								/>
+								<div class="carousel-caption d-none d-md-block">
+									<h2 class="silder-title">Get Started Digital Learning</h2>
+									<p class="w-50 m-auto fw-light pb-4 fs-6">
+										It is a long established fact that a reader will be
+										distracted by the readable content of a page when looking at
+										its layout.
+									</p>
+									<button class="btn btn-primary px-4 py-2 fs-5">
+										Get Started
+									</button>
+								</div>
+							</div>
+							<div style="height: 85vh" class="carousel-item">
+								<img
+									src="assets/images/cover/cover-2.jpg"
+									class="d-block w-100 img-fluid"
+									alt="..."
+								/>
+								<div class="carousel-caption d-none d-md-block">
+									<h2 class="silder-title">Get Started Digital Learning</h2>
+									<p class="w-50 m-auto fw-light pb-4 fs-6">
+										It is a long established fact that a reader will be
+										distracted by the readable content of a page when looking at
+										its layout.
+									</p>
+									<button class="btn btn-primary px-4 py-2 fs-5">
+										Get Started
+									</button>
+								</div>
+							</div>
+							<div style="height: 85vh" class="carousel-item">
+								<img
+									src="assets/images/cover/cover-3.jpg"
+									class="d-block w-100 img-fluid"
+									alt="..."
+								/>
+								<div class="carousel-caption d-none d-md-block">
+									<h2 class="silder-title">Get Started Digital Learning</h2>
+									<p class="w-50 m-auto fw-light pb-4 fs-6">
+										It is a long established fact that a reader will be
+										distracted by the readable content of a page when looking at
+										its layout.
+									</p>
+									<button class="btn btn-primary px-4 py-2 fs-5">
+										Get Started
+									</button>
+								</div>
+							</div>
+						</div>
+						<button
+							class="carousel-control-prev"
+							type="button"
+							data-bs-target="#carouselExampleCaptions"
+							data-bs-slide="prev"
+						>
+							<span
+								class="carousel-control-prev-icon"
+								aria-hidden="true"
+							></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button
+							class="carousel-control-next"
+							type="button"
+							data-bs-target="#carouselExampleCaptions"
+							data-bs-slide="next"
+						>
+							<span
+								class="carousel-control-next-icon"
+								aria-hidden="true"
+							></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+			</section>
+		</header>
 
-		<!-- Header Section End -->
+		<!------------------------------
+			 Header Section end 
+		------------------------------->
+
+		<!-- Body Section Start -->
+		<main>
+			<section class="">
+				<div class="container">
+					<h1 class="">Discover Our Popular Courses</h1>
+					<p>
+						It is a long established fact that a reader will be distracted by
+						the readable content of a page when looking at its layout.
+					</p>
+				</div>
+			</section>
+		</main>
+		<!-- Body Section End -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
