--- a/index.html
+++ b/index.html
@@ -212,14 +212,16 @@
 
 		<!-- Body Section Start -->
 		<main>
-			<section class="my-5">
-				<div class="container">
-					<h1 class="text-center">Discover Our Popular Courses</h1>
-					<p class="text-center w-50 m-auto text-black-50 pb-4">
+			<section class="py-5">
+				<div class="container text-center">
+					<h1 class="fs-1 w-50 m-auto fw-bold course-title">
+						Discover Our Popular Courses
+					</h1>
+					<p class="text-center w-50 m-auto text-black-50 pb-4 course-text">
 						It is a long established fact that a reader will be distracted by
 						the readable content of a page when looking at its layout.
 					</p>
-					<div class="course-list">
+					<div class="course-list my-4 text-start">
 						<div class="row">
 							<div class="col-lg-6 col-md-12">
 								<div class="card mb-3" style="max-width: 100%">
@@ -228,6 +230,7 @@
 											<img
 												src="assets/images/course/course-1.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -253,6 +256,7 @@
 											<img
 												src="assets/images/course/course-2.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -278,6 +282,7 @@
 											<img
 												src="assets/images/course/course-3.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -303,6 +308,7 @@
 											<img
 												src="assets/images/course/course-4.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -326,6 +332,7 @@
 											<img
 												src="assets/images/course/course-5.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -351,6 +358,7 @@
 											<img
 												src="assets/images/course/course-6.png"
 												class="img-fluid rounded-start"
+												id="course-img"
 												alt="..."
 											/>
 										</div>
@@ -369,8 +377,58 @@
 							</div>
 						</div>
 					</div>
+					<button class="btn btn-primary text-center">See More Courses</button>
 				</div>
 			</section>
+			<!-- Hero Section Start -->
+			<section class="py-5">
+				<div class="container">
+					<div class="card mb-3 border-0" style="max-width: 100%">
+						<div class="row g-0">
+							<div class="col-lg-5 col-md-5">
+								<img
+									src="assets/images/working.png"
+									class="img-fluid rounded-start hero-pic"
+									alt="..."
+								/>
+							</div>
+							<div
+								class="col-lg-7 col-md-7 d-flex align-items-center p-3"
+								style="background-color: #f4fafd"
+							>
+								<div class="card-body">
+									<h2 class="card-title fs-2 fw-bold">
+										Explore The elearning Institute
+									</h2>
+									<p class="card-text text-black-50">
+										There are many variations of passages of Lorem Ipsum
+										available, but the majority have suffered alteration in some
+										form, by injected humour, or randomised words which don't
+										look even slightly believable. If you are going to use a
+										passage of Lorem Ipsum, you need to be sure. Anything
+										embarrassing hidden in the middle of text. All the Lorem
+										Ipsum generators on the Internet tend to repeat predefined.
+									</p>
+									<div class="earning d-flex py-1">
+										<h2 class="card-text pe-4">
+											3.2K+
+											<span class="d-block fs-6">Online Courses</span>
+										</h2>
+										<h2 class="card-text px-4">
+											600+ <span class="d-block fs-6">Expert member</span>
+										</h2>
+										<h2 class="card-text px-4">
+											1K+ <span class="d-block fs-6">Rating & Review</span>
+										</h2>
+									</div>
+									<div class="btn btn-primary mt-2">Read More</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Hero Section End -->
 		</main>
 		<!-- Body Section End -->
 		<script
