--- a/index.html
+++ b/index.html
@@ -429,6 +429,33 @@
 				</div>
 			</section>
 			<!-- Hero Section End -->
+			<!-- Register section start -->
+			<section class="py-5">
+				<div class="container">
+					<div class="row">
+						<div class="card p-5 bg-primary" style="max-width: 100%">
+							<div class="row g-0 d-flex align-items-center">
+								<div class="col-lg-6 col-md-12">
+									<h2 class="text-white">Ready to join?</h2>
+									<p class="text-white-50">
+										It is a long established fact that a reader will be
+										distracted by the readable content of a page when looking at
+										its layout.
+									</p>
+								</div>
+								<div class="col-lg-6 col-md-12">
+									<div class="card-body d-flex justify-content-end">
+										<div class="btn btn-light px-4 py-2 text-primary">
+											Register Now
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Register section end -->
 		</main>
 		<!-- Body Section End -->
 		<script
