--- a/index.html
+++ b/index.html
@@ -435,16 +435,19 @@
 					<div class="row">
 						<div class="card p-5 bg-primary" style="max-width: 100%">
 							<div class="row g-0 d-flex align-items-center">
-								<div class="col-lg-6 col-md-12">
+								<div class="col-lg-6 col-md-12 Register-title">
 									<h2 class="text-white">Ready to join?</h2>
-									<p class="text-white-50">
+									<p class="text-white">
 										It is a long established fact that a reader will be
 										distracted by the readable content of a page when looking at
 										its layout.
 									</p>
 								</div>
 								<div class="col-lg-6 col-md-12">
-									<div class="card-body d-flex justify-content-end">
+									<div
+										class="card-body d-flex justify-content-end"
+										id="Register-btn"
+									>
 										<div class="btn btn-light px-4 py-2 text-primary">
 											Register Now
 										</div>
@@ -456,6 +459,75 @@
 				</div>
 			</section>
 			<!-- Register section end -->
+			<!-- Successfull Student Section Start -->
+			<section class="py-5">
+				<div class="container">
+					<div class="student-title">
+						<h2 class="fs-1 fw-bold">Meet Our Successfull Students</h2>
+						<p class="fs-6 text-black-50 w-50 course-text">
+							It is a long established fact that a reader will be distracted by
+							the readable content of a page when looking at its layout.
+						</p>
+					</div>
+					<div class="student-list">
+						<div class="row">
+							<div class="col-lg-3 col-md-6 py-4">
+								<div class="card" style="width: 100%">
+									<img
+										src="assets/images/student/student-1.png"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h3 class="card-title fs-5 fw-bold">Awlad Hossain</h3>
+										<p class="card-text fs-6">UIUX Designer</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-6 py-4">
+								<div class="card" style="width: 100%">
+									<img
+										src="assets/images/student/student-2.png"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h3 class="card-title fs-5 fw-bold">Jannatul Islam</h3>
+										<p class="card-text fs-6">Motion Design</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-6 py-4">
+								<div class="card" style="width: 100%">
+									<img
+										src="assets/images/student/student-3.png"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h3 class="card-title fs-5 fw-bold">Imran Hossain</h3>
+										<p class="card-text fs-6">Graphic Designer</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-6 py-4">
+								<div class="card" style="width: 100%">
+									<img
+										src="assets/images/student/student-4.png"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h3 class="card-title fs-5 fw-bold">Nishi Akter</h3>
+										<p class="card-text fs-6">Web Developer</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Successfull Student Section end -->
 		</main>
 		<!-- Body Section End -->
 		<script
