--- a/index.html
+++ b/index.html
@@ -528,6 +528,190 @@
 				</div>
 			</section>
 			<!-- Successfull Student Section end -->
+
+			<!-- FeedBack Section start -->
+			<!-- <section class="py-5">
+				<div class="container">
+					<div class="feedBack">
+						<h2 class="fs-1 w-50 m-auto fw-bold course-title">
+							Some Students Feedback
+						</h2>
+						<p class="text-center w-50 m-auto text-black-50 course-text">
+							It is a long established fact that a reader will be distracted by
+							the readable content of a page when looking at its layout.
+						</p>
+						<div class="feedBack-item">
+							<div
+								id="carouselExampleControls"
+								class="carousel slide"
+								data-bs-ride="carousel"
+							>
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img src="..." class="d-block w-100" alt="..." />
+									</div>
+									<div class="carousel-item">
+										<img src="..." class="d-block w-100" alt="..." />
+									</div>
+									<div class="carousel-item">
+										<img src="..." class="d-block w-100" alt="..." />
+									</div>
+								</div>
+								<button
+									class="carousel-control-prev"
+									type="button"
+									data-bs-target="#carouselExampleControls"
+									data-bs-slide="prev"
+								>
+									<span
+										class="carousel-control-prev-icon"
+										aria-hidden="true"
+									></span>
+									<span class="visually-hidden">Previous</span>
+								</button>
+								<button
+									class="carousel-control-next"
+									type="button"
+									data-bs-target="#carouselExampleControls"
+									data-bs-slide="next"
+								>
+									<span
+										class="carousel-control-next-icon"
+										aria-hidden="true"
+									></span>
+									<span class="visually-hidden">Next</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section> -->
+			<!-- FeedBack Section end -->
+
+			<!-- FAQ Section Start -->
+			<section class="py-5">
+				<div class="container">
+					<div class="faq-section w-75 m-auto">
+						<h2 class="fs-1 text-center fw-bold course-title">
+							Frequently Asked Questions
+						</h2>
+						<p class="text-center w-50 m-auto text-black-50 pb-4 course-text">
+							It is a long established fact that a reader will be distracted by
+							the readable content of a page when looking at its layout.
+						</p>
+						<div class="accordion" id="accordionPanelsStayOpenExample">
+							<div class="accordion-item">
+								<h2 class="accordion-header" id="panelsStayOpen-headingOne">
+									<button
+										class="accordion-button"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#panelsStayOpen-collapseOne"
+										aria-expanded="true"
+										aria-controls="panelsStayOpen-collapseOne"
+									>
+										What are the difference between flexbox and grid?
+									</button>
+								</h2>
+								<div
+									id="panelsStayOpen-collapseOne"
+									class="accordion-collapse collapse show"
+									aria-labelledby="panelsStayOpen-headingOne"
+								>
+									<div class="accordion-body">
+										Grid and flexbox. The basic difference between CSS Grid
+										Layout and CSS Flexbox Layout is that flexbox was designed
+										for layout in one dimension - either a row or a column. Grid
+										was designed for two-dimensional layout - rows, and columns
+										at the same time.
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+									<button
+										class="accordion-button collapsed"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#panelsStayOpen-collapseTwo"
+										aria-expanded="false"
+										aria-controls="panelsStayOpen-collapseTwo"
+									>
+										What are the differences between bootstrap and tailwind?
+									</button>
+								</h2>
+								<div
+									id="panelsStayOpen-collapseTwo"
+									class="accordion-collapse collapse"
+									aria-labelledby="panelsStayOpen-headingTwo"
+								>
+									<div class="accordion-body">
+										Bootstrap is a component-based framework, which means it
+										comes with prebuilt components and includes other utilities
+										for layering displays, spacing, etc. Tailwind, on the other
+										hand, CSS is a utility-first framework. Using Tailwind CSS
+										is akin to writing regular CSS. Unlike Bootstrap, it has no
+										prebuilt components.
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h2 class="accordion-header" id="panelsStayOpen-headingThree">
+									<button
+										class="accordion-button collapsed"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#panelsStayOpen-collapseThree"
+										aria-expanded="false"
+										aria-controls="panelsStayOpen-collapseThree"
+									>
+										what is css box model?
+									</button>
+								</h2>
+								<div
+									id="panelsStayOpen-collapseThree"
+									class="accordion-collapse collapse"
+									aria-labelledby="panelsStayOpen-headingThree"
+								>
+									<div class="accordion-body">
+										In CSS, the term "box model" is used when talking about
+										design and layout. The CSS box model is essentially a box
+										that wraps around every HTML element. It consists of:
+										margins, borders, padding, and the actual content.
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h2 class="accordion-header" id="panelsStayOpen-headingFour">
+									<button
+										class="accordion-button collapsed"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#panelsStayOpen-collapseFour"
+										aria-expanded="false"
+										aria-controls="panelsStayOpen-collapseFour"
+									>
+										what is semantic tag?
+									</button>
+								</h2>
+								<div
+									id="panelsStayOpen-collapseFour"
+									class="accordion-collapse collapse"
+									aria-labelledby="panelsStayOpen-headingFour"
+								>
+									<div class="accordion-body">
+										The HTML semantics refers to the tags that provide meaning
+										to an HTML page rather than just presentation. It makes HTML
+										more comprehensible by better defining the different
+										sections and layout of web pages.
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- FAQ Section End -->
 		</main>
 		<!-- Body Section End -->
 		<script
