Companise section done

--- a/index.html
+++ b/index.html
@@ -712,6 +712,48 @@
 				</div>
 			</section>
 			<!-- FAQ Section End -->
+
+			<!-- Company Logo Section Start -->
+			<section class="py-5 companies-section">
+				<div class="container">
+					<h2 class="fs-1 fw-bold text-center py-4">
+						Trusted by over 800+ companies
+					</h2>
+					<div class="company-item d-flex justify-content-between">
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-1.png"
+							alt=""
+						/>
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-2.png"
+							alt=""
+						/>
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-3.png"
+							alt=""
+						/>
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-4.png"
+							alt=""
+						/>
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-5.png"
+							alt=""
+						/>
+						<img
+							class="img-thumbnail border-0"
+							src="assets/images/company/company-6.png"
+							alt=""
+						/>
+					</div>
+				</div>
+			</section>
+			<!-- Company Logo Section End -->
 		</main>
 		<!-- Body Section End -->
 		<script
