Footer section done

--- a/index.html
+++ b/index.html
@@ -756,6 +756,59 @@
 			<!-- Company Logo Section End -->
 		</main>
 		<!-- Body Section End -->
+
+		<!----------------------------
+			Footer Section Start
+		----------------------------->
+		<footer>
+			<section class="bg-dark py-5">
+				<div class="container">
+					<div class="footer-info text-center">
+						<h1 class="text-white">HeroTech</h1>
+						<address class="text-white fw-light">
+							Office 41, Zawaya Buildin, Ghala Muscat, <br />
+							Sultanate of Oman
+						</address>
+						<div>
+							<a class="text-decoration-none text-white fw-light" href="#"
+								>Privacy Policy</a
+							>
+							<span class="text-white">|</span>
+							<a class="text-decoration-none text-white fw-light" href="#">
+								Terms of use</a
+							>
+						</div>
+						<div class="pt-3 text-center">
+							<ul class="list-inline">
+								<li class="list-inline-item px-2">
+									<a class="text-white fs-5" href="#"
+										><i class="fa-brands fa-facebook"></i
+									></a>
+								</li>
+								<li class="list-inline-item px-2">
+									<a class="text-white fs-5" href="#"
+										><i class="fa-brands fa-twitter"></i
+									></a>
+								</li>
+								<li class="list-inline-item px-2">
+									<a class="text-white fs-5" href="#"
+										><i class="fa-brands fa-linkedin-in"></i
+									></a>
+								</li>
+								<li class="list-inline-item px-2">
+									<a class="text-white fs-5" href="#"
+										><i class="fa-brands fa-tiktok"></i
+									></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
+		<!----------------------------
+			Footer Section end
+		----------------------------->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
