--- a/index.html
+++ b/index.html
@@ -101,11 +101,14 @@
 									alt="..."
 								/>
 								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">Get Started Digital Learning</h2>
-									<p class="w-50 m-auto fw-light pb-4 fs-6" id="slider-para">
-										It is a long established fact that a reader will be
-										distracted by the readable content of a page when looking at
-										its layout.
+									<h2 class="silder-title">
+										Learn Web development to get a job
+									</h2>
+									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+										Come and enjoy unlimited coding support, daily concept clear
+										sessions, real-world projects, job placement service, and
+										many more. And 70% of our successful students get hired
+										internationally.
 									</p>
 									<button
 										class="btn btn-primary px-4 py-2 fs-5"
@@ -122,11 +125,12 @@
 									alt="..."
 								/>
 								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">Get Started Digital Learning</h2>
-									<p class="w-50 m-auto fw-light pb-4 fs-6" id="slider-para">
-										It is a long established fact that a reader will be
-										distracted by the readable content of a page when looking at
-										its layout.
+									<h2 class="silder-title">Programming Just Got Fun</h2>
+									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+										Personalized, fun, and interactive learning process. Enjoy
+										our gamified courses to master python, mobile app
+										development, cyber security, C programming, C++, and many
+										more.
 									</p>
 									<button
 										class="btn btn-primary px-4 py-2 fs-5"
@@ -143,11 +147,14 @@
 									alt="..."
 								/>
 								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">Get Started Digital Learning</h2>
-									<p class="w-50 m-auto fw-light pb-4 fs-6" id="slider-para">
-										It is a long established fact that a reader will be
-										distracted by the readable content of a page when looking at
-										its layout.
+									<h2 class="silder-title">
+										Employer: Find the perfect match for your team
+									</h2>
+									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+										Need a smart Developer? Hire extremely hardworking, quick
+										learners and ready to contribute. We trained them months
+										after months to build the growth and learning mindset in
+										them.
 									</p>
 									<button
 										class="btn btn-primary px-4 py-2 fs-5"
@@ -203,9 +210,13 @@
 					<h1 class="fs-1 w-50 m-auto fw-bold course-title">
 						Discover Our Popular Courses
 					</h1>
-					<p class="text-center w-50 m-auto text-black-50 pb-4 course-text">
-						It is a long established fact that a reader will be distracted by
-						the readable content of a page when looking at its layout.
+					<p
+						class="text-center w-75 pt-3 m-auto text-black-50 pb-4 course-text"
+					>
+						Our course list is arranged with those skills which are currently in
+						most demand in the country and outside the country. From here you
+						can enroll in the course online or offline anytime at your
+						convenience.
 					</p>
 					<div class="course-list my-4 text-start">
 						<div class="row">
@@ -226,8 +237,9 @@
 													Fundamental Of UI/UX Design
 												</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													The UX design process can be divided into four key
+													phases: user research, design, testing, and
+													implementation
 												</p>
 												<p class="card-text text-primary">Price : 20$</p>
 											</div>
@@ -252,8 +264,9 @@
 													Javascript Basic to advanced
 												</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													JavaScript course for all those who want to learn and
+													master JavaScript programming skills right from
+													scratch.
 												</p>
 												<p class="card-text text-primary">Price : 90$</p>
 											</div>
@@ -278,8 +291,8 @@
 													Fullstack Web Development
 												</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													A full stack web developer is a person who can develop
+													both client and server software
 												</p>
 												<p class="card-text text-primary">Price : 70$</p>
 											</div>
@@ -302,10 +315,11 @@
 											<div class="card-body">
 												<h5 class="card-title fw-bold">Digital Marketing</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													Digital marketing, also called online marketing, is
+													the promotion of brands to connect with potential
+													customers.
 												</p>
-												<p class="card-text text-primary">Price : 40$</p>
+												<p class="card-text text-primary">Price : $40</p>
 											</div>
 										</div>
 									</div>
@@ -328,8 +342,8 @@
 													Photography Basic Rules
 												</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													Basic photography concepts: Aperture, shutter speed,
+													ISO speed, exposure.
 												</p>
 												<p class="card-text text-primary">Price : 50$</p>
 											</div>
@@ -352,8 +366,8 @@
 											<div class="card-body">
 												<h5 class="card-title fw-bold">Motion Graphics</h5>
 												<p class="card-text text-black-50">
-													Some quick example text to build on the card title and
-													make up the bulk of the card.
+													Motion graphics (sometimes mograph) are pieces of
+													animation or digital footage
 												</p>
 												<p class="card-text text-primary">Price : 30$</p>
 											</div>
@@ -388,16 +402,15 @@
 							>
 								<div class="card-body">
 									<h2 class="card-title fs-2 fw-bold">
-										Explore The learning Institute
+										Explore The HeroTech Institute
 									</h2>
 									<p class="card-text text-black-50">
-										There are many variations of passages of Lorem Ipsum
-										available, but the majority have suffered alteration in some
-										form, by injected humour, or randomised words which don't
-										look even slightly believable. If you are going to use a
-										passage of Lorem Ipsum, you need to be sure. Anything
-										embarrassing hidden in the middle of text. All the Lorem
-										Ipsum generators on the Internet tend to repeat predefined.
+										Established In 2022, HeroTech Today Is An Organization With
+										A Vision For Presence All Around The World. It Has A Strong
+										Team That Is Focused To Ensure That Arobil Is At The Top Of
+										Its Game. The Development Arm Is A Hotspot For IT
+										Outsourcing Today And Target Is To Be One Of The Top 30
+										Countries For Offshore IT Services.
 									</p>
 									<div class="earning d-flex py-1">
 										<h2 class="card-text pe-4">
@@ -572,8 +585,8 @@
 					<div class="student-title">
 						<h2 class="fs-1 fw-bold">Meet Our Successful Students</h2>
 						<p class="fs-6 text-black-50 w-50 course-text">
-							It is a long established fact that a reader will be distracted by
-							the readable content of a page when looking at its layout.
+							Below are the profiles of some of the people who have learned from
+							our courses and got jobs/interns in various places
 						</p>
 					</div>
 					<div class="student-list">
@@ -707,7 +720,7 @@
 						<h2 class="fs-1 text-center fw-bold course-title">
 							Frequently Asked Questions
 						</h2>
-						<p class="text-center w-50 m-auto text-black-50 pb-4 course-text">
+						<p class="text-center w-75 m-auto text-black-50 pb-4 course-text">
 							It is a long established fact that a reader will be distracted by
 							the readable content of a page when looking at its layout.
 						</p>
