--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 						data-bs-ride="false"
 					>
 						<div class="carousel-inner">
-							<div class="carousel-item active">
+							<div class="carousel-item active overlay">
 								<img
 									src="assets/images/cover/cover-1.png"
 									class="d-block w-100 img-fluid slider-img"
 									alt="..."
 								/>
 								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">
+									<h2 class="silder-title fw-bold">
 										Learn Web development to get a job
 									</h2>
-									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+									<p class="w-75 m-auto fw-light pb-4 fs-6" id="slider-para">
 										Come and enjoy unlimited coding support, daily concept clear
 										sessions, real-world projects, job placement service, and
 										many more. And 70% of our successful students get hired
@@ -118,15 +118,15 @@
 									</button>
 								</div>
 							</div>
-							<div class="carousel-item slider-item">
+							<div class="carousel-item slider-item overlay">
 								<img
 									src="assets/images/cover/cover-2.jpg"
 									class="d-block w-100 img-fluid slider-img"
 									alt="..."
 								/>
-								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">Programming Just Got Fun</h2>
-									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+								<div class="carousel-caption d-md-block text-center">
+									<h2 class="silder-title fw-bold">Programming Just Got Fun</h2>
+									<p class="w-75 m-auto fw-light pb-4 fs-6" id="slider-para">
 										Personalized, fun, and interactive learning process. Enjoy
 										our gamified courses to master python, mobile app
 										development, cyber security, C programming, C++, and many
@@ -140,17 +140,17 @@
 									</button>
 								</div>
 							</div>
-							<div class="carousel-item slider-item">
+							<div class="carousel-item slider-item overlay">
 								<img
 									src="assets/images/cover/cover-3.jpg"
 									class="d-block w-100 img-fluid slider-img"
 									alt="..."
 								/>
 								<div class="carousel-caption d-md-block">
-									<h2 class="silder-title">
+									<h2 class="silder-title fw-bold">
 										Employer: Find the perfect match for your team
 									</h2>
-									<p class="w-75 m-auto pb-4 fs-6" id="slider-para">
+									<p class="w-75 m-auto fw-light pb-4 fs-6" id="slider-para">
 										Need a smart Developer? Hire extremely hardworking, quick
 										learners and ready to contribute. We trained them months
 										after months to build the growth and learning mindset in
@@ -377,7 +377,9 @@
 							</div>
 						</div>
 					</div>
-					<button class="btn btn-primary text-center">See More Courses</button>
+					<button class="btn btn-primary text-center btn-md mt-3">
+						See More Courses
+					</button>
 				</div>
 			</section>
 
@@ -424,7 +426,7 @@
 											1K+ <span class="d-block fs-6">Rating & Review</span>
 										</h2>
 									</div>
-									<div class="btn btn-primary mt-2">Read More</div>
+									<div class="btn btn-primary mt-2 btn-md">Read More</div>
 								</div>
 							</div>
 						</div>
@@ -455,7 +457,7 @@
 										id="Register-btn"
 									>
 										<button
-											class="btn btn-light px-4 py-2 text-primary"
+											class="btn btn-light px-4 py-2 text-primary fw-bold"
 											data-bs-toggle="modal"
 											data-bs-target="#staticBackdrop"
 										>
@@ -483,7 +485,7 @@
 								<div class="modal-header m-auto pt-4">
 									<div>
 										<h2
-											class="modal-title text-center text-primary"
+											class="modal-title text-center text-primary fw-bolder"
 											id="staticBackdropLabel"
 										>
 											Register
@@ -552,7 +554,7 @@
 												></label
 											>
 										</div>
-										<button type="submit" class="btn btn-primary w-100">
+										<button type="submit" class="btn btn-primary w-100 btn-md">
 											Submit
 										</button>
 									</form>
@@ -652,65 +654,6 @@
 				Successful Student Section end 
 			------------------------------------------->
 
-			<!-- FeedBack Section start -->
-			<!-- <section class="py-5">
-				<div class="container">
-					<div class="feedBack">
-						<h2 class="fs-1 w-50 m-auto fw-bold course-title">
-							Some Students Feedback
-						</h2>
-						<p class="text-center w-50 m-auto text-black-50 course-text">
-							It is a long established fact that a reader will be distracted by
-							the readable content of a page when looking at its layout.
-						</p>
-						<div class="feedBack-item">
-							<div
-								id="carouselExampleControls"
-								class="carousel slide"
-								data-bs-ride="carousel"
-							>
-								<div class="carousel-inner">
-									<div class="carousel-item active">
-										<img src="..." class="d-block w-100" alt="..." />
-									</div>
-									<div class="carousel-item">
-										<img src="..." class="d-block w-100" alt="..." />
-									</div>
-									<div class="carousel-item">
-										<img src="..." class="d-block w-100" alt="..." />
-									</div>
-								</div>
-								<button
-									class="carousel-control-prev"
-									type="button"
-									data-bs-target="#carouselExampleControls"
-									data-bs-slide="prev"
-								>
-									<span
-										class="carousel-control-prev-icon"
-										aria-hidden="true"
-									></span>
-									<span class="visually-hidden">Previous</span>
-								</button>
-								<button
-									class="carousel-control-next"
-									type="button"
-									data-bs-target="#carouselExampleControls"
-									data-bs-slide="next"
-								>
-									<span
-										class="carousel-control-next-icon"
-										aria-hidden="true"
-									></span>
-									<span class="visually-hidden">Next</span>
-								</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
-			<!-- FeedBack Section end -->
-
 			<!---------------------------------
 				 FAQ Section Start 
 			----------------------------------->
@@ -725,7 +668,7 @@
 							the readable content of a page when looking at its layout.
 						</p>
 						<div class="accordion" id="accordionPanelsStayOpenExample">
-							<div class="accordion-item">
+							<div class="accordion-item my-3 border border-dark-50 rounded">
 								<h2 class="accordion-header" id="panelsStayOpen-headingOne">
 									<button
 										class="accordion-button"
@@ -752,7 +695,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="accordion-item">
+							<div class="accordion-item my-3 border border-dark-50 rounded">
 								<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
 									<button
 										class="accordion-button collapsed"
@@ -780,7 +723,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="accordion-item">
+							<div class="accordion-item my-3 border border-dark-50 rounded">
 								<h2 class="accordion-header" id="panelsStayOpen-headingThree">
 									<button
 										class="accordion-button collapsed"
@@ -806,7 +749,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="accordion-item">
+							<div class="accordion-item my-3 border border-dark-50 rounded">
 								<h2 class="accordion-header" id="panelsStayOpen-headingFour">
 									<button
 										class="accordion-button collapsed"
